hcs12mem 1.4.1 [2007-xx-xx]

- name change: hc12mem -> hcs12mem, due to confusing suggestion that the tool
  is for HC12 chips
- allow mixed addresses (banked and non-banked) in banked S-record files
- ignore address from terminating record, if it's not used
- report address from terminating record
- improved detection of chip security
- terminating record address in FLASH readouts is taken from RESET vector
- detection of BDM connection problems and smarter error messages

hc12mem 1.3.2 [2007-04-10]

- fixed bug in setting extended speed (other than 1/2/4/8MHz) for new PODEX
  version using ATTINY2313
- added preliminary support for recognizing S12X chips

hc12mem 1.3.1 (2006.02.08)

- relaxed timing for PODEX - handshake timeout increased, because on slower
  computers or even with heavy task switching timeouts happened
- bug fix: FPROT was read directly from memory, thus when the MCU was secured,
  false readouts occured - now it is accessed via register, with proper
  FLASH bank selection
- bug fix: bits of FPROT were misinterpreted, depending on bits pattern
- non-programmed FLASH area detection has changed block threshold size from
  2 to 4 bytes, so less non-contiguous blocks are reported (2 bytes of 0xff
  were quite common in the code)

hc12mem 1.3 (2005.12.16)

- support for Daniel Malik's TBDML - Turbo BDM Light USB POD
  bulk USB transfers with TBDML are also supported, although not by default,
  because they are violating USB specification. To activate them, --tbdml-bulk
  option is required, giving faster data transfer rates (works under FreeBSD
  and MS Windows, linux rejects it, but Your Mileage May Vary)
- more improvements to reporting FLASH address ranges to program
- long options supported on MS Windows
- some minor bugfixes affecting all interfaces, so users of previous
  versions should upgrade even if new functionality is of no importance

hc12mem 1.2 (2005.11.23)

- support for Freescale's serial monitor - Application Note AN2548,