@@ -6,13 +6,34 @@ Architecture: all
 Essential: no
 Depends: 
 Pre-Depends: 
-Recommends: 
+Recommends: libusb
 Suggests: 
-Installed-Size: 392
+Installed-Size: 248
 Maintainer: Michal Konieczny <mk@cml.mfk.net.pl>
 Conflicts: 
 Replaces: 
 Provides: hcs12mem
-Description: The description can contain free-form text
-             describing the function of the program, what
-             kind of features it has, and so on.
+Description: Freescale HCS12 MCU tool: erase,read,write,protect,unprotect FLASH/EEPROM
+	hcs12mem is a command line tool for embedded microcontroller
+	developers using Freescale's HCS12-family MCUs.
+	
+	It can:
+	- erase/read/write/protect internal EEPROM memory
+	- erase/read/write internal FLASH memory
+	- protect/unprotect whole MCU
+	
+	Supported MCUs: most S12 derivatives
+	<MC9S12> A32, A64, A128, A256, A512, C32, C64, C96, C128,
+	GC16, GC32, GC64, GC96, GC128, D32, D64, D128, D256, D512,
+	E32, E64, E128, E256, H128, H256, UF32, NE64.
+	
+	Supported target connections:
+	- BDM:
+	  - Daniel Malik's TDBML (Turbo BDM Light) USB POD
+	  - Kevin Ross's BDM12 POD
+	  - Marek Peca's PODEX
+	  - my own improved version of PODEX with firmware bugfixes
+	- LRAE (Load RAM And Execute) serial bootloader
+	  (see Freescale's Application Note AN2546)
+	- Freescale's HCS12 MCU serial monitor
+	  (see Freescale's Application Note AN2548)
