@@ -1,3 +1,3 @@
-MD5 (hc12mem-1.4.1.tar.gz) = ee6ae63a7550a293d8ea669d46005eb7
-SHA256 (hc12mem-1.4.1.tar.gz) = e6477e6237b55af8043d8a3ce46a72d7f68d321ac51bc3e98941d8671a9f161e
+MD5 (hc12mem-1.4.1.tar.gz) = dad2fa7e710b2554cbe56e4f5fe94ca8
+SHA256 (hc12mem-1.4.1.tar.gz) = 790e90a0a750659c975cb63eab16e3d56e1dc8e30f65c8078b1851b0f47dd848
 SIZE (hc12mem-1.4.1.tar.gz) = 216136
