@@ -1,0 +1,63 @@
+S00B00006C7261652E73313945
+S1133C00CF4000163D9B8C07D024078601163DA4A7
+S1133C1020EE7901108C32002308494949180B40E1
+S1133C200110CE00C81810B750BA01107A01107AEA
+S1133C3001008600163DA4CE3DB4163D926A3016AE
+S1133C403D926A308003270A180E163D926A3004AA
+S1133C5031F8CE3DB4E6015387AB300431FB180E86
+S1133C60163D92181727078655163DA420C98600CD
+S1133C70163DA4B63DB4810727538108276F8109F7
+S1133C802729810A18270092810B182700B486027D
+S1133C90163DA420A28600163DA4209B180B80018B
+S1133CA005A7A7A7A71F010540FB3DB63DB67A01AE
+S1133CB003B63DB77A0030FE3DB8180B3001051845
+S1133CC00000FFFF180B40010607D120C8B63DB61F
+S1133CD07A0103B63DB77A0030180B30010518039A
+S1133CE0FFFFFFFE180B41010607B120A8B63DB641
+S1133CF07A0103B63DB77A0030180B30010518037A
+S1133D00FFFFFFFE180B05010607911F01050402C2
+S1133D1020838603163DA4063C37B63DB67A0103DC
+S1133D20B63DB77A0030FE3DB8FD3DBAC7A60018CF
+S1133D3006180EA60008076C0436F2180F0765066D
+S1133D403C37B63DB67A0103B63DB77A0030FE3D46
+S1133D50B8FD3DBA3435CE3DC8C707366A301806BB
+S1133D60180E0436F5072B181727053130063C6763
+S1133D703A4931180B300105180BFF0104CE3DC838
+S1133D8018023171180B200106163C9C0434F1060C
+S1133D903C951F00CC20FBB600CF3D07F5180E075D
+S1133DA0F1B7813D1F00CC80FB7A00CF3D07F518A9
+S1133DB00F07F13D000000000000000000000000BB
+S1133DC000000000000000000000000000000000EF
+S1133DD000000000000000000000000000000000DF
+S1133DE000000000000000000000000000000000CF
+S1133DF000000000000000000000000000000000BF
+S1133E0000000000000000000000000000000000AE
+S1133E10000000000000000000000000000000009E
+S1133E20000000000000000000000000000000008E
+S1133E30000000000000000000000000000000007E
+S1133E40000000000000000000000000000000006E
+S1133E50000000000000000000000000000000005E
+S1133E60000000000000000000000000000000004E
+S1133E70000000000000000000000000000000003E
+S1133E80000000000000000000000000000000002E
+S1133E90000000000000000000000000000000001E
+S1133EA0000000000000000000000000000000000E
+S1133EB000000000000000000000000000000000FE
+S1133EC000000000000000000000000000000000EE
+S1133ED000000000000000000000000000000000DE
+S1133EE000000000000000000000000000000000CE
+S1133EF000000000000000000000000000000000BE
+S1133F0000000000000000000000000000000000AD
+S1133F10000000000000000000000000000000009D
+S1133F20000000000000000000000000000000008D
+S1133F30000000000000000000000000000000007D
+S1133F40000000000000000000000000000000006D
+S1133F50000000000000000000000000000000005D
+S1133F60000000000000000000000000000000004D
+S1133F70000000000000000000000000000000003D
+S1133F80000000000000000000000000000000002D
+S1133F90000000000000000000000000000000001D
+S1133FA0000000000000000000000000000000000D
+S1133FB000000000000000000000000000000000FD
+S10B3FC00000000000000000F5
+S9033C00C0
